Fix 3d overflow issue

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -80,6 +80,10 @@
     position: absolute;
 }
 
+.adjust {
+    z-index: 10;
+}
+
 
 .cubespinner {
     -webkit-animation-name: spincube;
